Added Linear Regession Exercise

--- a/Exercise/Gradient Descent/Exercise.ipynb
+++ b/Exercise/Gradient Descent/Exercise.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "id": "b78ac779",
    "metadata": {},
    "outputs": [],
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "c7e492fe",
    "metadata": {},
    "outputs": [],
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "id": "697e47b5",
    "metadata": {},
    "outputs": [
@@ -225,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "id": "3144b186",
    "metadata": {},
    "outputs": [],
@@ -237,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "id": "e4221c73",
    "metadata": {},
    "outputs": [
@@ -258,7 +258,7 @@
        "Length: 200, dtype: float64"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -280,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 10,
    "id": "aa1a0cfb",
    "metadata": {},
    "outputs": [],
@@ -293,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 11,
    "id": "d1bddd6a",
    "metadata": {},
    "outputs": [
@@ -303,7 +303,7 @@
        "1.53031001985059"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -325,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 12,
    "id": "2c814bd8",
    "metadata": {},
    "outputs": [],
@@ -343,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 13,
    "id": "087595d4",
    "metadata": {},
    "outputs": [
@@ -368,6 +368,347 @@
     "b, w = update_beta(X, y, y_hat, b, w, 0.01)\n",
     "print(\"After updating, Bias(intercept) is\", b)\n",
     "print(\"After updating, Weights(coefficients) are\", w)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "6ea5a929",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def run_gradient_descent(X, y, alpha=0.001, num_iter=400):\n",
+    "    b, w = initialize(X.shape[1])\n",
+    "    iter_num = 0\n",
+    "    \n",
+    "    gd_iterations_df = pd.DataFrame(columns=['iteration', 'loss'])\n",
+    "    result_idx = 0\n",
+    "    \n",
+    "    for i in range(num_iter):\n",
+    "        y_hat = predict(b, w, X)\n",
+    "        iter_cost = calculate_cost(y, y_hat)\n",
+    "        prev_b = b\n",
+    "        prev_w = w\n",
+    "        \n",
+    "        b, w = update_beta(X, y, y_hat, prev_b, prev_w, alpha)\n",
+    "        \n",
+    "        if (i % 10 == 0):\n",
+    "            gd_iterations_df.loc[result_idx] = [iter_num, iter_cost]\n",
+    "            result_idx += 1\n",
+    "            \n",
+    "        iter_num += 1\n",
+    "        \n",
+    "    return gd_iterations_df, b, w"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "9127b165",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Final estimate of bias(intercept) is 0.28708291582872\n",
+      "Final estimate of weights(coefficients) are [0.5619044  0.64258719 0.29463454]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>iteration</th>\n",
+       "      <th>loss</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.530310</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>10.0</td>\n",
+       "      <td>1.465201</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>20.0</td>\n",
+       "      <td>1.403145</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>30.0</td>\n",
+       "      <td>1.343996</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>40.0</td>\n",
+       "      <td>1.287615</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>50.0</td>\n",
+       "      <td>1.233868</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>60.0</td>\n",
+       "      <td>1.182630</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>70.0</td>\n",
+       "      <td>1.133780</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>80.0</td>\n",
+       "      <td>1.087203</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>90.0</td>\n",
+       "      <td>1.042793</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>100.0</td>\n",
+       "      <td>1.000444</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>110.0</td>\n",
+       "      <td>0.960059</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>120.0</td>\n",
+       "      <td>0.921545</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>130.0</td>\n",
+       "      <td>0.884812</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>140.0</td>\n",
+       "      <td>0.849776</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>150.0</td>\n",
+       "      <td>0.816356</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>160.0</td>\n",
+       "      <td>0.784476</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>170.0</td>\n",
+       "      <td>0.754063</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>180.0</td>\n",
+       "      <td>0.725048</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>190.0</td>\n",
+       "      <td>0.697364</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>200.0</td>\n",
+       "      <td>0.670949</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>210.0</td>\n",
+       "      <td>0.645743</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>220.0</td>\n",
+       "      <td>0.621689</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td>230.0</td>\n",
+       "      <td>0.598733</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24</th>\n",
+       "      <td>240.0</td>\n",
+       "      <td>0.576824</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25</th>\n",
+       "      <td>250.0</td>\n",
+       "      <td>0.555912</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26</th>\n",
+       "      <td>260.0</td>\n",
+       "      <td>0.535950</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27</th>\n",
+       "      <td>270.0</td>\n",
+       "      <td>0.516895</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>28</th>\n",
+       "      <td>280.0</td>\n",
+       "      <td>0.498704</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29</th>\n",
+       "      <td>290.0</td>\n",
+       "      <td>0.481337</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>30</th>\n",
+       "      <td>300.0</td>\n",
+       "      <td>0.464755</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>31</th>\n",
+       "      <td>310.0</td>\n",
+       "      <td>0.448922</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>32</th>\n",
+       "      <td>320.0</td>\n",
+       "      <td>0.433802</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>33</th>\n",
+       "      <td>330.0</td>\n",
+       "      <td>0.419364</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>34</th>\n",
+       "      <td>340.0</td>\n",
+       "      <td>0.405574</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>35</th>\n",
+       "      <td>350.0</td>\n",
+       "      <td>0.392404</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>36</th>\n",
+       "      <td>360.0</td>\n",
+       "      <td>0.379825</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>37</th>\n",
+       "      <td>370.0</td>\n",
+       "      <td>0.367808</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>38</th>\n",
+       "      <td>380.0</td>\n",
+       "      <td>0.356330</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>39</th>\n",
+       "      <td>390.0</td>\n",
+       "      <td>0.345363</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    iteration      loss\n",
+       "0         0.0  1.530310\n",
+       "1        10.0  1.465201\n",
+       "2        20.0  1.403145\n",
+       "3        30.0  1.343996\n",
+       "4        40.0  1.287615\n",
+       "5        50.0  1.233868\n",
+       "6        60.0  1.182630\n",
+       "7        70.0  1.133780\n",
+       "8        80.0  1.087203\n",
+       "9        90.0  1.042793\n",
+       "10      100.0  1.000444\n",
+       "11      110.0  0.960059\n",
+       "12      120.0  0.921545\n",
+       "13      130.0  0.884812\n",
+       "14      140.0  0.849776\n",
+       "15      150.0  0.816356\n",
+       "16      160.0  0.784476\n",
+       "17      170.0  0.754063\n",
+       "18      180.0  0.725048\n",
+       "19      190.0  0.697364\n",
+       "20      200.0  0.670949\n",
+       "21      210.0  0.645743\n",
+       "22      220.0  0.621689\n",
+       "23      230.0  0.598733\n",
+       "24      240.0  0.576824\n",
+       "25      250.0  0.555912\n",
+       "26      260.0  0.535950\n",
+       "27      270.0  0.516895\n",
+       "28      280.0  0.498704\n",
+       "29      290.0  0.481337\n",
+       "30      300.0  0.464755\n",
+       "31      310.0  0.448922\n",
+       "32      320.0  0.433802\n",
+       "33      330.0  0.419364\n",
+       "34      340.0  0.405574\n",
+       "35      350.0  0.392404\n",
+       "36      360.0  0.379825\n",
+       "37      370.0  0.367808\n",
+       "38      380.0  0.356330\n",
+       "39      390.0  0.345363"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "gd_df, b, w = run_gradient_descent(X, y)\n",
+    "\n",
+    "print(\"Final estimate of bias(intercept) is\", b)\n",
+    "print(\"Final estimate of weights(coefficients) are\", w)\n",
+    "\n",
+    "gd_df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1bd5e6a1",
+   "metadata": {},
+   "source": [
+    "Thus, the value of loss is reduced in each iterations."
    ]
   }
  ],
