Added Flight Price Prediction Model

--- a/Notes/Notes.ipynb
+++ b/Notes/Notes.ipynb
@@ -102,7 +102,9 @@
     "\n",
     "<b>Goal of Linear Regression:</b>  \n",
     "Not all data points are going to pass through the straight line, so the goal of linear regression is find the minimum error.  \n",
-    "So that the all the data points are as close as possible to the regression line."
+    "So that the all the data points are as close as possible to the regression line.\n",
+    "\n",
+    "<img src='assets/Linear Regression.png' width=500>"
    ]
   },
   {
